# qa-test-infrastructure

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
phase1_backend/app/: database.py  main.py  models.py  schemas.py
phase1_backend/tests/: conftest.py  test_users.py
phase2_data/: data_reconciliation.py  test_acid.py  test_nosql_eventual_consistency.py
phase3_frontend/pages/: dashboard_page.py
phase3_frontend/tests/: conftest.py  test_dashboard.py
phase4_ai_ml/: monitor_dashboard.py
